commnet user not showing bug fixed

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17803,7 +17803,6 @@ html {
 .panel-post .panel-heading .post-author .post-options {
     float: right;
     color: #859AB5;
-    margin-top: 6px;
 }
 .panel-post .panel-heading .post-author .post-options > ul > li > a {
     color: #859AB5;
